--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/PalladiumDwh.ClientReader.Infrastructure.Tests.csproj
@@ -199,12 +199,19 @@
     <Compile Include="Csv\Command\LoadPatientArtExtractCsvCommandTests.cs" />
     <Compile Include="Csv\Command\LoadPatientExtractCsvCommandTests.cs" />
     <Compile Include="Data\Command\ClearExtractsCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientArtExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientArtExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientBaselinesExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientBaselinesExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientLaboratoryExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientLaboratoryExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientPharmacyExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientPharmacyExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientStatusExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientStatusExtractDbCommandTests.cs" />
+    <Compile Include="Data\Command\ValidatePatientVisitExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\LoadPatientVisitExtractDbCommandTests.cs" />
     <Compile Include="Data\Command\SyncPatientArtExtractCommandTests.cs" />
     <Compile Include="Data\Command\SyncPatientBaselinesExtractCommandTests.cs" />
