--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -116,6 +116,13 @@
     <Compile Include="Csv\Command\LoadPatientStatusExtractCsvCommand.cs" />
     <Compile Include="Csv\Command\LoadPatientVisitExtractCsvCommand.cs" />
     <Compile Include="Data\Command\ClearExtractsCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientArtExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientBaselinesExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientLaboratoryExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientPharmacyExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientStatusExtractCommand.cs" />
+    <Compile Include="Data\Command\ValidatePatientVisitExtractCommand.cs" />
     <Compile Include="Data\Command\ValidateExtractCommand.cs" />
     <Compile Include="Data\Command\LoadExtractCommand.cs" />
     <Compile Include="Data\Command\SyncPatientArtExtractCommand.cs" />
