added validtion to syncservice

--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -164,6 +164,10 @@
     <Compile Include="Migrations\201704251416047_addcheckerorrFlag.Designer.cs">
       <DependentUpon>201704251416047_addcheckerorrFlag.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704260842016_removeErrorTables.cs" />
+    <Compile Include="Migrations\201704260842016_removeErrorTables.Designer.cs">
+      <DependentUpon>201704260842016_removeErrorTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
     <Compile Include="Migrations\MySqlHistoryContext.cs" />
@@ -196,6 +200,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704251416047_addcheckerorrFlag.resx">
       <DependentUpon>201704251416047_addcheckerorrFlag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704260842016_removeErrorTables.resx">
+      <DependentUpon>201704260842016_removeErrorTables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Seed\EMR.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
