--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Model\PatientPharmacyExtractRowTests.cs" />
     <Compile Include="Model\PatientStatusExtractRowTests.cs" />
     <Compile Include="Model\PatientExtractRowTests.cs" />
+    <Compile Include="Model\ClientExtractTests.cs" />
     <Compile Include="Model\ValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SyncServiceFromCsvTests.cs" />
