--- a/PalladiumDwh.ClientApp/packages.config
+++ b/PalladiumDwh.ClientApp/packages.config
@@ -3,6 +3,7 @@
   <package id="dbup" version="3.3.5" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
   <package id="StructureMap" version="4.4.2" targetFramework="net46" />
   <package id="System.Net.Http.Extensions.Compression.Client" version="2.0.5" targetFramework="net46" />
 </packages>
