--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -63,6 +63,9 @@
       <HintPath>..\packages\NUnit.3.6.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
