--- a/PalladiumDwh.ClientReader.Core/packages.config
+++ b/PalladiumDwh.ClientReader.Core/packages.config
@@ -3,4 +3,5 @@
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net46" />
   <package id="FastMember" version="1.1.0" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
 </packages>
