--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
@@ -18,6 +18,7 @@
   <package id="Npgsql" version="3.2.0" targetFramework="net46" />
   <package id="NUnit" version="3.6.0" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
