--- a/PalladiumDwh.ClientReader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure/packages.config
@@ -14,6 +14,7 @@
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
   <package id="Npgsql" version="3.2.0" targetFramework="net46" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
 </packages>
