--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -167,33 +167,13 @@
     <Compile Include="Data\Repository\ExtractSettingRepository.cs" />
     <Compile Include="Data\Repository\ClientRepository.cs" />
     <Compile Include="Data\Repository\EMRRepository.cs" />
-    <Compile Include="Migrations\201704240657079_retreat.cs" />
-    <Compile Include="Migrations\201704240657079_retreat.Designer.cs">
-      <DependentUpon>201704240657079_retreat.cs</DependentUpon>
+    <Compile Include="Migrations\201704271228567_Initial.cs" />
+    <Compile Include="Migrations\201704271228567_Initial.Designer.cs">
+      <DependentUpon>201704271228567_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704240950470_tempExtractErrors.cs" />
-    <Compile Include="Migrations\201704240950470_tempExtractErrors.Designer.cs">
-      <DependentUpon>201704240950470_tempExtractErrors.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704251333120_validations.cs" />
-    <Compile Include="Migrations\201704251333120_validations.Designer.cs">
-      <DependentUpon>201704251333120_validations.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704251416047_addcheckerorrFlag.cs" />
-    <Compile Include="Migrations\201704251416047_addcheckerorrFlag.Designer.cs">
-      <DependentUpon>201704251416047_addcheckerorrFlag.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704260842016_removeErrorTables.cs" />
-    <Compile Include="Migrations\201704260842016_removeErrorTables.Designer.cs">
-      <DependentUpon>201704260842016_removeErrorTables.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704261604444_allowNullsInTemp.cs" />
-    <Compile Include="Migrations\201704261604444_allowNullsInTemp.Designer.cs">
-      <DependentUpon>201704261604444_allowNullsInTemp.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201704271020383_extractValidations.cs" />
-    <Compile Include="Migrations\201704271020383_extractValidations.Designer.cs">
-      <DependentUpon>201704271020383_extractValidations.cs</DependentUpon>
+    <Compile Include="Migrations\201704271230402_InitialPatientValidations.cs" />
+    <Compile Include="Migrations\201704271230402_InitialPatientValidations.Designer.cs">
+      <DependentUpon>201704271230402_InitialPatientValidations.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Migrations\LiveSeeder.cs" />
@@ -221,26 +201,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EmbeddedResource Include="Migrations\201704240657079_retreat.resx">
-      <DependentUpon>201704240657079_retreat.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704271228567_Initial.resx">
+      <DependentUpon>201704271228567_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704240950470_tempExtractErrors.resx">
-      <DependentUpon>201704240950470_tempExtractErrors.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704251333120_validations.resx">
-      <DependentUpon>201704251333120_validations.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704251416047_addcheckerorrFlag.resx">
-      <DependentUpon>201704251416047_addcheckerorrFlag.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704260842016_removeErrorTables.resx">
-      <DependentUpon>201704260842016_removeErrorTables.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704261604444_allowNullsInTemp.resx">
-      <DependentUpon>201704261604444_allowNullsInTemp.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201704271020383_extractValidations.resx">
-      <DependentUpon>201704271020383_extractValidations.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704271230402_InitialPatientValidations.resx">
+      <DependentUpon>201704271230402_InitialPatientValidations.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Scripts.resx">
       <Generator>ResXFileCodeGenerator</Generator>
