--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -153,8 +153,20 @@
     <Compile Include="Model\ProcessStatus.cs" />
     <Compile Include="Model\PushResponse.cs" />
     <Compile Include="Model\RunSummary.cs" />
+    <Compile Include="Model\Source\TempPatientArtExtractError.cs" />
+    <Compile Include="Model\Source\TempPatientBaselinesExtractError.cs" />
     <Compile Include="Model\Source\TempPatientExtractError.cs" />
+    <Compile Include="Model\Source\TempPatientArtExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientBaselinesExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientLaboratoryExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientPharmacyExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientStatusExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientVisitExtractErrorSummary.cs" />
     <Compile Include="Model\Source\TempPatientExtractErrorSummary.cs" />
+    <Compile Include="Model\Source\TempPatientLaboratoryExtractError.cs" />
+    <Compile Include="Model\Source\TempPatientPharmacyExtractError.cs" />
+    <Compile Include="Model\Source\TempPatientStatusExtractError.cs" />
+    <Compile Include="Model\Source\TempPatientVisitExtractError.cs" />
     <Compile Include="Model\SyncSummary.cs" />
     <Compile Include="Model\Project.cs" />
     <Compile Include="Model\Profile\ClientExtractProfile.cs" />
