--- a/PalladiumDwh.Shared.Tests/packages.config
+++ b/PalladiumDwh.Shared.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FastMember" version="1.1.0" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
-  <package id="NUnit" version="3.6.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
+  <package id="NUnit" version="3.6.1" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net46" />
 </packages>
