--- a/PalladiumDwh.ClientUploader.Core.Tests/packages.config
+++ b/PalladiumDwh.ClientUploader.Core.Tests/packages.config
@@ -2,8 +2,15 @@
 <packages>
   <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="NMemory" version="1.1.2" targetFramework="net46" />
   <package id="NUnit" version="3.6.1" targetFramework="net46" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
 </packages>
