--- a/PalladiumDwh.ClientApp/packages.config
+++ b/PalladiumDwh.ClientApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="dbup" version="3.3.5" targetFramework="net46" />
+  <package id="DocumentFormat.OpenXml" version="2.7.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
