--- a/PalladiumDwh.ClientReader.Core.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.7.1" targetFramework="net46" />
   <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
