--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -34,6 +34,9 @@
       <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DocumentFormat.OpenXml, Version=0.0.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.7.1\lib\net45\DocumentFormat.OpenXml.dll</HintPath>
+    </Reference>
     <Reference Include="FastMember, Version=1.0.0.9, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FastMember.1.1.0\lib\net40\FastMember.dll</HintPath>
       <Private>True</Private>
@@ -73,6 +76,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\Commands\ILoadCsvExtractCommand.cs" />
@@ -120,6 +124,7 @@
     <Compile Include="Interfaces\Profiles\IClientPatientPharmacyProfile.cs" />
     <Compile Include="Interfaces\Profiles\IClientPatientStatusProfile.cs" />
     <Compile Include="Interfaces\Profiles\IClientPatientVisitProfile.cs" />
+    <Compile Include="Interfaces\Reports\ISummaryReport.cs" />
     <Compile Include="Interfaces\Repository\ITempPatientArtExtractRepository.cs" />
     <Compile Include="Interfaces\Repository\ITempPatientBaselinesExtractRepository.cs" />
     <Compile Include="Interfaces\Repository\ITempPatientExtractRepository.cs" />
@@ -172,6 +177,7 @@
     <Compile Include="Model\ProcessStatus.cs" />
     <Compile Include="Model\PushResponse.cs" />
     <Compile Include="Model\RunSummary.cs" />
+    <Compile Include="Interfaces\Source\IExtractErrorSummary.cs" />
     <Compile Include="Model\Source\TempPatientArtExtractError.cs" />
     <Compile Include="Model\Source\TempPatientBaselinesExtractError.cs" />
     <Compile Include="Model\Source\TempPatientExtractError.cs" />
@@ -217,6 +223,7 @@
     <Compile Include="Model\ValidationError.cs" />
     <Compile Include="Model\Validator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\SummaryReport.cs" />
     <Compile Include="Services\SyncService.cs" />
   </ItemGroup>
   <ItemGroup>
