--- a/PalladiumDwh.ClientReader.Core/packages.config
+++ b/PalladiumDwh.ClientReader.Core/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net46" />
+  <package id="DocumentFormat.OpenXml" version="2.7.1" targetFramework="net46" />
   <package id="FastMember" version="1.1.0" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
