--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -103,6 +103,8 @@
     <Compile Include="Model\ValidatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\SummaryReportTests.cs" />
+    <Compile Include="Services\ImportServiceTests.cs" />
+    <Compile Include="Services\ExportServiceTests.cs" />
     <Compile Include="Services\SyncServiceFromCsvTests.cs" />
     <Compile Include="Services\SyncServiceTests.cs" />
     <Compile Include="TestHelpers.cs" />
@@ -113,6 +115,9 @@
     <Content Include="database.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Exports\62ed88f5-d0f2-443a-b42a-43b4b22fb129.dwh" />
+    <None Include="Exports\ba5c3b22-3b67-4bc0-af43-ab513ec4ae9e.dwh" />
+    <None Include="Exports\ca32c13c-b754-47cf-bff0-84ee84077fbe.dwh" />
     <None Include="Extracts\_ARTPatientExtract Lunga Lunga 13053.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
