--- a/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
+++ b/PalladiumDwh.ClientApp/PalladiumDwh.ClientApp.csproj
@@ -61,6 +61,9 @@
   <PropertyGroup>
     <SignManifests>false</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\app.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DbUp, Version=3.3.5.0, Culture=neutral, PublicKeyToken=4b419c53bdfd4cbf, processorArchitecture=MSIL">
       <HintPath>..\packages\dbup.3.3.5\lib\net35\DbUp.dll</HintPath>
@@ -93,24 +96,6 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Net.Http.4.3.1\lib\net46\System.Net.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.Cryptography.Algorithms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.Cryptography.Algorithms.4.3.0\lib\net46\System.Security.Cryptography.Algorithms.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.Cryptography.Encoding, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.Cryptography.Encoding.4.3.0\lib\net46\System.Security.Cryptography.Encoding.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.Cryptography.Primitives, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.Cryptography.Primitives.4.3.0\lib\net46\System.Security.Cryptography.Primitives.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net46\System.Security.Cryptography.X509Certificates.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -180,6 +165,37 @@
     <Compile Include="Views\Startup.Designer.cs">
       <DependentUpon>Startup.cs</DependentUpon>
     </Compile>
+    <None Include="Resources\app.ico" />
+    <None Include="Resources\favicon.ico" />
+    <None Include="Resources\ms-icon-310x310.png" />
+    <None Include="Resources\ms-icon-150x150.png" />
+    <None Include="Resources\ms-icon-144x144.png" />
+    <None Include="Resources\ms-icon-70x70.png" />
+    <None Include="Resources\favicon-96x96.png" />
+    <None Include="Resources\favicon-32x32.png" />
+    <None Include="Resources\favicon-16x16.png" />
+    <None Include="Resources\apple-icon-precomposed.png" />
+    <None Include="Resources\apple-icon-180x180.png" />
+    <None Include="Resources\apple-icon-152x152.png" />
+    <None Include="Resources\apple-icon-144x144.png" />
+    <None Include="Resources\apple-icon-120x120.png" />
+    <None Include="Resources\apple-icon-114x114.png" />
+    <None Include="Resources\apple-icon-76x76.png" />
+    <None Include="Resources\apple-icon-72x72.png" />
+    <None Include="Resources\apple-icon-60x60.png" />
+    <None Include="Resources\apple-icon-57x57.png" />
+    <None Include="Resources\apple-icon.png" />
+    <None Include="Resources\android-icon-192x192.png" />
+    <None Include="Resources\android-icon-144x144.png" />
+    <None Include="Resources\android-icon-96x96.png" />
+    <None Include="Resources\android-icon-72x72.png" />
+    <None Include="Resources\android-icon-48x48.png" />
+    <None Include="Resources\android-icon-36x36.png" />
+    <None Include="Resources\pepfar.png" />
+    <None Include="Resources\palladiumlogo.png" />
+    <None Include="Resources\nascop.png" />
+    <None Include="Resources\gok.png" />
+    <None Include="Resources\dwh.png" />
     <EmbeddedResource Include="Scripts\Script0001.sql" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -189,6 +205,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
