added manifest model

--- a/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
+++ b/PalladiumDwh.DWapi/PalladiumDwh.DWapi.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\PatientPharmacyController.cs" />
     <Compile Include="Controllers\PatientStatusController.cs" />
     <Compile Include="Controllers\PatientVisitsController.cs" />
+    <Compile Include="Controllers\SpotController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
